<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_artikelActivity">

    <TextView
        android:id="@+id/edit_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_artikel"
        android:textColor="#eb9b34"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        />

    <TextView
        android:id="@+id/edit_judul_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_judul_artikel"
        android:textColor="#eb9b34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_artikel"
        app:layout_constraintVertical_bias="0.092" />


    <EditText
        android:id="@+id/edit_judulan_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:text="@string/edit_judulan_artikel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_judul_artikel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edit_isi_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_isi_artikel"
        android:textColor="#eb9b34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_judulan_artikel"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/edit_isian_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MultiAutoCompleteTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_isi_artikel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit_edit_artikel"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:background="@drawable/button_custom"
        android:onClick="updateArtikel"
        android:text="@string/update_artikel"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_isian_artikel"
        app:layout_constraintVertical_bias="0.962" />
</androidx.constraintlayout.widget.ConstraintLayout>