<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahArtikelActivity">

    <TextView
        android:id="@+id/write_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_artikel"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/judul_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_artikel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_artikel"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/isi_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi_artikel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul_artikel"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/isian_judul_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/isi_artikel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul_artikel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/isian_artikel"
        android:layout_width="368dp"
        android:layout_height="343dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isi_artikel"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="27dp" />

    <Button
        android:id="@+id/submit_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/submit_artikel"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isian_artikel"
        app:layout_constraintVertical_bias="0.481" />

</androidx.constraintlayout.widget.ConstraintLayout>