<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataPasienActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul_isi_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_isi_report"
                android:textColor="#eb9b34"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/nama_pasien"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judul_isi_report" />

            <EditText
                android:id="@+id/isi_nama"
                android:layout_width="240dp"
                android:layout_height="42dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edited_text"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.169"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_menu" />

            <TextView
                android:id="@+id/jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/jenis_kelamin"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.094"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_menu" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jenis_kelamin">

                <RadioButton
                    android:id="@+id/pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perempuan" />

                <RadioButton
                    android:id="@+id/lk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Laki Laki" />
            </RadioGroup>

            <TextView
                android:id="@+id/umur_pasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:text="@string/umur_pasien"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/jenis_kelamin"
                app:layout_constraintTop_toTopOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/isi_umur"
                android:layout_width="114dp"
                android:layout_height="41dp"
                android:background="@drawable/edited_text"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/umur_pasien" />

            <TextView
                android:id="@+id/berat_pasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/berat_pasien"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.087"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isi_umur" />

            <EditText
                android:id="@+id/isi_berat_badan"
                android:layout_width="114dp"
                android:layout_height="41dp"
                android:background="@drawable/edited_text"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/berat_pasien" />

            <TextView
                android:id="@+id/tinggi_pasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/tinggi_pasien"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.094"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/berat_pasien" />

            <EditText
                android:id="@+id/isi_tinggi_baadan"
                android:layout_width="114dp"
                android:layout_height="41dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edited_text"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.094"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tinggi_pasien" />

            <TextView
                android:id="@+id/penyakit_pasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/judul_penyakit_pasien"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tinggi_pasien" />

            <Spinner
                android:id="@+id/drop_pasien"
                android:layout_width="146dp"
                android:layout_height="20dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/penyakit_pasien" />

            <TextView
                android:id="@+id/menu_yangDiinginkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_yangDiinginkan"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drop_pasien" />

            <Spinner
                android:id="@+id/drop_menu"
                android:layout_width="146dp"
                android:layout_height="20dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_yangDiinginkan" />

            <TextView
                android:id="@+id/waktu_makan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/waktu_makan"
                android:textColor="#eb9b34"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_yangDiinginkan" />


            <Spinner
                android:id="@+id/drop_waktu"
                android:layout_width="146dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.109"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waktu_makan"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/submit_data_pasien"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="107dp"
                android:layout_height="44dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_custom"
                android:onClick="submitPasien"
                android:text="@string/submit_data_pasien"
                android:textSize="16sp"
                app:layout_anchor="@+id/berat_pasien"
                app:layout_anchorGravity="end|bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drop_waktu"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>